# ccsched

./: .env.example  .gitignore  Cargo.toml  README.md
crates/ccsched/: Cargo.toml
crates/ccsched-core/: Cargo.toml
crates/ccsched-core/src/: config.rs  db.rs  error.rs  lib.rs  models.rs  scheduler.rs  worker.rs
crates/ccsched/src/: cli.rs  client.rs  lib.rs  main.rs  models.rs  server.rs
