[workspace]
members = [
    "crates/ccsched",
    "crates/ccsched-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["YouXam"]
license = "MIT"
repository = "https://github.com/youxam/claude-code-scheduler"

[workspace.dependencies]
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
axum = { version = "0.7", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }