[package]
name = "ccsched-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
anyhow.workspace = true
uuid.workspace = true
dotenvy.workspace = true